# UdSP-Tanks

./: .gitignore  README.md
client-side/: CMakeLists.txt  Makefile  main.c
client-side/application/: application.c  application.h
client-side/bullet/: bullet.c  bullet.h
client-side/map/: map.c  map.h
client-side/server_controller/: server_controller.c  server_controller.h
client-side/tank/: tank.c  tank.h
client-side/windows/: main_menu.c  main_menu.h  menu.c  menu.h  show_error.c  show_error.h  show_score.c  show_score.h  show_status.c  show_status.h
client-side/windows/elements/: button.c  button.h  textbox.c  textbox.h
client-side/windows/main_menu/: main_menu.c  main_menu.h
client-side/windows/menu/: menu.c  menu.h
client-side/windows/show_score/: show_score.c  show_score.h
client-side/windows/show_status/: show_status.c  show_status.h
common/base/: server_message_types.h  type_of_maps.h
common/linked_list/: linked_list.c  linked_list.h
server-side/: CMakeLists.txt  Makefile  main.c
server-side/application/: application.c  application.h
server-side/base/: movement.h  network.h
server-side/linked_list/: linked_list.c  linked_list.h
server-side/player/: player.c  player.h
server-side/server_controller/: server_controller.c  server_controller.h
